--- a/2020dev02/index.html
+++ b/2020dev02/index.html
@@ -80,8 +80,8 @@
 
   <div class="swiper-container gallery-top">
 <div class="swiper-wrapper">
-<div class="swiper-slide cover" style="background-image: url('images/img_1.jpg');">
-  <a href="images/img_1.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
+  <a href="images/img_1.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -93,8 +93,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_2.jpg');">
-  <a href="images/img_2.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_2.JPG');">
+  <a href="images/img_2.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -104,8 +104,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_3.jpg');">
-  <a href="images/img_3.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_3.JPG');">
+  <a href="images/img_3.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -115,8 +115,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_4.jpg');">
-  <a href="images/img_4.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_4.JPG');">
+  <a href="images/img_4.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -126,8 +126,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_5.jpg');">
-  <a href="images/img_5.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_5.JPG');">
+  <a href="images/img_5.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -137,8 +137,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_6.jpg');">
-  <a href="images/img_6.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_6.JPG');">
+  <a href="images/img_6.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -148,8 +148,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_7.jpg');">
-  <a href="images/img_7.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_7.JPG');">
+  <a href="images/img_7.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -159,8 +159,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_8.jpg');">
-  <a href="images/img_8.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_8.JPG');">
+  <a href="images/img_8.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -170,8 +170,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_9.jpg');">
-  <a href="images/img_9.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_9.JPG');">
+  <a href="images/img_9.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -181,8 +181,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_10.jpg');">
-  <a href="images/img_10.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_10.JPG');">
+  <a href="images/img_10.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -192,8 +192,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_1.jpg');">
-  <a href="images/img_1.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_1.JPG');">
+  <a href="images/img_1.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -205,8 +205,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_2.jpg');">
-  <a href="images/img_2.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_2.JPG');">
+  <a href="images/img_2.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -216,8 +216,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_3.jpg');">
-  <a href="images/img_3.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_3.JPG');">
+  <a href="images/img_3.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -227,8 +227,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_4.jpg');">
-  <a href="images/img_4.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_4.JPG');">
+  <a href="images/img_4.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -238,8 +238,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_5.jpg');">
-  <a href="images/img_5.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_5.JPG');">
+  <a href="images/img_5.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -249,8 +249,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_6.jpg');">
-  <a href="images/img_6.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_6.JPG');">
+  <a href="images/img_6.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -260,8 +260,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_7.jpg');">
-  <a href="images/img_7.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_7.JPG');">
+  <a href="images/img_7.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -271,8 +271,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_8.jpg');">
-  <a href="images/img_8.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_8.JPG');">
+  <a href="images/img_8.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -282,8 +282,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_9.jpg');">
-  <a href="images/img_9.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_9.JPG');">
+  <a href="images/img_9.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -293,8 +293,8 @@
   </div>
 </div>
 
-<div class="swiper-slide cover" style="background-image: url('images/img_10.jpg');">
-  <a href="images/img_10.jpg" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
+<div class="swiper-slide cover" style="background-image: url('images/img_10.JPG');">
+  <a href="images/img_10.JPG" data-fancybox="gallery" class="zoom"><span class="icon-search"></span></a>
   <div class="img-info">
     <span class="btn-toggle-expand"><span class="icon-call_made"></span></span>
     <div class="img-info-content">
@@ -311,26 +311,26 @@
 </div>
 <div class="swiper-container gallery-thumbs">
 <div class="swiper-wrapper">
-<div class="swiper-slide cover" style="background-image:url(images/img_1.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_2.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_3.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_4.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_5.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_6.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_7.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_8.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_9.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_10.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_1.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_2.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_3.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_4.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_5.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_6.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_7.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_8.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_9.jpg)"></div>
-<div class="swiper-slide cover" style="background-image:url(images/img_10.jpg)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_2.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_3.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_4.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_5.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_6.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_7.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_1.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_2.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_3.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_4.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_5.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_6.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_7.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_8.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_9.JPG)"></div>
+<div class="swiper-slide cover" style="background-image:url(images/img_10.JPG)"></div>
 </div>
 </div>
 
